2005-09-20  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Shell.py (sigint_handler): Drastic simplification which
	also seems to make Ctrl-C work correctly across threads!  This is
	so simple, that I can't beleive I'd missed it before.  Needs more
	testing, though.

	* IPython/genutils.py (get_home_dir): add protection against
	non-dirs in win32 registry.

	* IPython/iplib.py (InteractiveShell.alias_table_validate): fix
	bug where dict was mutated while iterating (pysh crash).

2005-09-06  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/iplib.py (handle_auto): Fix inconsistency arising from
	spurious newlines added by this routine.  After a report by
	F. Mantegazza.

2005-09-05  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Shell.py (hijack_gtk): remove pygtk.require("2.0")
	calls.  These were a leftover from the GTK 1.x days, and can cause
	problems in certain cases (after a report by John Hunter).

	* IPython/iplib.py (InteractiveShell.__init__): Trap exception if
	os.getcwd() fails at init time.  Thanks to patch from David Remahl
	<chmod007 AT mac.com>.
	(InteractiveShell.__init__): prevent certain special magics from
	being shadowed by aliases.  Closes
	http://www.scipy.net/roundup/ipython/issue41.

2005-08-31  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/iplib.py (InteractiveShell.complete): Added new
	top-level completion method to expose the completion mechanism
	beyond readline-based environments.

2005-08-19  Fernando Perez  <Fernando.Perez@colorado.edu>

	* tools/ipsvnc (svnversion): fix svnversion capture.

	* IPython/iplib.py (InteractiveShell.__init__): Add has_readline
	attribute to self, which was missing.  Before, it was set by a
	routine which in certain cases wasn't being called, so the
	instance could end up missing the attribute.  This caused a crash.
	Closes http://www.scipy.net/roundup/ipython/issue40.

2005-08-16  Fernando Perez  <fperez@colorado.edu>
